Prevent wrapping of give info titles

--- a/src/views/Give/give.scss
+++ b/src/views/Give/give.scss
@@ -405,6 +405,10 @@
     .give-info-vault-box {
       margin-right: 0px;
     }
+
+    .cta-text {
+      white-space: nowrap;
+    }
   }
 
   .donation-table {
